--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maestro",
+  "name": "maestro-io",
   "version": "1.0.0",
   "description": "Maestro is an orchestrator for nodejs. (Dependency Injection & Message Bus)",
   "main": "maestro.js",
